Cleanup for the GPL plugin, externalization and license headers update.